--- a/notification.component.html
+++ b/notification.component.html
@@ -1,28 +1,21 @@
-<html>
-<head>
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
-
-</head>
-<body>
-  
-
-  
+<h5>Notification</h5>
 <section class="notification-main">
   <div class="container-fluid">
    <div class="row">
     <div class="col-md-4">
-      <div class="notification-titel">
-        <ul class="nav nav-pills flex-column notificasion-titel" id="myTab" role="tablist">
+      <div class="notification-title">
+        <ul class="nav nav-pills flex-column notification-title" id="myTab" role="tablist">
   <li class="nav-item">
     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true"> 
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p></a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false"> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p></a>
+    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false"> 
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p></a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false"> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p></a>
+    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false"> 
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p></a>
   </li>
 </ul>
 </div>
@@ -47,51 +40,6 @@
     </div>
     <!-- /.col-md-8 -->
   </div>
-  
-  
-  
 </div>
-    
-    
-    
-    
-<!-- /.container -->
-
-     
+    <!-- /.container -->
 </section>
-
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script type="text/javascript" src="https://jacoblett.github.io/bootstrap4-latest/bootstrap-4-latest.min.js"></script>
-<script type="text/javascript"></script>
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-
-<!---<div class="container-fluid">
-    <div class="col-xs-5">
-    <div class="grid">
-<div class="col-2">Notification1</div>
-<div class="col-2">Notification2</div>
-<div class="col-2">Notification3</div>
-<div class="col-2">Notification4</div>
-<div class="col-2">Notification5</div>
-    </div>
-</div>
-<div class="col-xs-7">
-    <div class="grid">
-
-        <div class="col-xs-12">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. WikipediaIn publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. WikipediaIn publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. WikipediaIn publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. Wikipedia</div>
-    </div>
-
-
-</div>
-
-</div>---->
