--- a/notification.component.html
+++ b/notification.component.html
@@ -1,46 +1,109 @@
-<a href="#" >Go Back to Last page</a> 
-<h5>Notification</h5>
 <section class="notification-main">
-  <div class="container-fluid">
-   <div class="row">
-    <div class="col-md-4">
-      <div class="notification-title">
-        <ul class="nav nav-pills flex-column notification-title" id="myTab" role="tablist">
-  <li class="nav-item">
-    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true"> 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false"> 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false"> 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p></a>
-  </li>
-</ul>
-</div>
-    </div>
-    <!-- /.col-md-4 -->
-        <div class="col-md-8">
-      <div class="tab-content  notification-code" id="myTabContent">
-  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-  <h2>Home</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p>
-  </div>
-  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-  <h2>Profile</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p>
-  </div>
-  <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-  <h2>Contact</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p>
-  
-  </div>
-</div>
-    </div>
-    <!-- /.col-md-8 -->
-  </div>
-</div>
-    <!-- /.container -->
+	<div class="container-fluid">
+		<div class="notification-width">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="back-to-lastpage"> <a href="#"><h6>Go back to last page</h6> </a>
+					</div>
+					<div class="top-heading">
+						<h3>Notifications</h3>
+					</div>
+				</div>
+			</div>
+			<div class="row notification-rw">
+				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+					<div class="notification-titel ">
+						<ul class="nav nav-pills flex-column notificasion-titel" id="myTab" role="tablist">
+							<li class="nav-item">
+								<a class="nav-link active" id="" data-toggle="tab" href="" role="tab" aria-controls="" aria-selected="true">
+									<div class="notifi-subject">
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium...</p>
+										<p class="date-in-color">16/05/21<span class="ml-15">5 days left</span>
+										</p>
+									</div>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" id="" data-toggle="tab" href="" role="tab" aria-controls="" aria-selected="false">
+									<div class="notifi-subject">
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium...</p>
+										<p class="date-in-color">16/05/21<span class="ml-15">5 days left</span>
+										</p>
+									</div>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" id="" data-toggle="tab" href="" role="tab" aria-controls="" aria-selected="false">
+									<div class="notifi-subject">
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium...</p>
+										<p class="date-in-color">16/05/21<span class="ml-15">5 days left</span>
+										</p>
+									</div>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" id="" data-toggle="tab" href="" role="tab" aria-controls="" aria-selected="false">
+									<div class="notifi-subject">
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium...</p>
+										<p class="date-in-color">16/05/21<span class="ml-15">5 days left</span>
+										</p>
+									</div>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" id="" data-toggle="tab" href="" role="tab" aria-controls="" aria-selected="false">
+									<div class="notifi-subject">
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium...</p>
+										<p class="date-in-color">16/05/21<span class="ml-15">5 days left</span>
+										</p>
+									</div>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" id="" data-toggle="tab" href="" role="tab" aria-controls="" aria-selected="false">
+									<div class="notifi-subject">
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium...</p>
+										<p class="date-in-color">16/05/21<span class="ml-15">5 days left</span>
+										</p>
+									</div>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" id="" data-toggle="tab" href="" role="tab" aria-controls="" aria-selected="false">
+									<div class="notifi-subject">
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium...</p>
+										<p class="date-in-color">16/05/21<span class="ml-15">5 days left</span>
+										</p>
+									</div>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<!-- /.col-md-4 -->
+				<div class="col-xl-8 col-lg-8 col-md-8 col-sm-8">
+					<div class="tab-content  notification-code" id="">
+						<div class="tab-pane fade show active" id="" role="tabpanel" aria-labelledby="">
+							<div class="notification-detail-hd">
+								<h6>Received on 6/14/2021</h6>
+								<h6>Will be removed in 7 days</h6>
+							</div>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p>
+							<h6 class="writer-name">-Aaron</h6>
+						</div>
+						<div class="tab-pane fade" id="" role="tabpanel" aria-labelledby="">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p>
+						</div>
+						<div class="tab-pane fade" id="" role="tabpanel" aria-labelledby="">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem blanditiis voluptates vel ipsam? Facilis, earum!</p>
+						</div>
+					</div>
+				</div>
+				<!-- /.col-md-8 -->
+			</div>
+		</div>
+	</div>
+	<!-- /.container -->
 </section>
