--- a/header.component.html
+++ b/header.component.html
@@ -4,32 +4,46 @@
       <div class="container-fluid">
          <nav>
             <div class="row hd-vertical-center">
-               <div class="col-xl-4 col-lg-5 col-md-5 col-sm-5">
+              
+                  <div class="col-xl-2 col-lg-2 col-md-3 col-sm-3">
                   <div class="header-left-info display-set">
                      <div class="address-top">
                         <h6>Olive Garden #1005</h6>
                         <p>East Kissimmee,FL34726</p>
                      </div>
                      <div class="map-icon"> <img src="./assets/Icons/Location Icon.png" aria-hidden="true" style="color: #fff;"></div>
-                     <div class="left-boder-styles">
-                        <h6>ParPull Production System</h6>
-                     </div>
                   </div>
                </div>
-               <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+               <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2">
+              
+                  
+                 
+                  <div class="left-boder-styles">
+                     <h6 class="parpull-text">ParPull Production System</h6>
+                  </div>
+               
+             </div>
+
+
+               
+               <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1">
                   <div class="header-center-info">
                      <div class="top-logo-img">
                         <a class="" href="#">
-                           <img src="./assets/Logos/Olive Garden_Logo.png" class="img-fluid">
+                           <img src="./assets/Logos/Capital Burger.png" class="img-fluid">
                         </a>
                      </div>
+                  </div>
+               </div>
+               <div class="col-xl-2 col-lg-3 col-md-2 col-sm-4">
+                  <div class="header-center-info">
                      <div class="logo-boder-styles top-dates">
-                        <p class="color-wt">Parring for:</p>
+                        <p class="color-wt">Parring for: <span></span></p>
                         <h6 class="color-wt-subtext">Tuesday, June 15s</h6>
                      </div>
                   </div>
                </div>
-               <div class="col-xl-4 col-lg-3 col-md-3 col-sm-3">
+               <div class="col-xl-4 col-lg-3 col-md-3 col-sm-2">
                   <div class="top-right-info">
                      <ul class="contact-icon">
                         <li><a href=""><img src="./assets/Icons/Unclicked.png" class="img-fluid"></a></li>
@@ -68,4 +82,3 @@
 </header>
 <!-- <app-notification></app-notification>
 <app-footer></app-footer> -->
-
